chore: 컨테이너 이미지 경량화
Dockerfile 211MB
Dockerfile-with-jdeps 179MB
Dockerfile-original 459MB